[package]
name = "orkz"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "who I am"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bifrost = { path = "../../../rusthub/component/bifrost" }
protos = { path = "internal/protos" }
bytes = "1.7.1"
clap = { version = "4.5.13", features = ["derive"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.38.0", features = ["full"] }
log4rs = "1.3.0"
log = "0.4.22"
tracing-log = "0.2.0"
chrono = "0.4.38"
serde_json = "1.0.120"
